--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -15,6 +15,7 @@ img{
     height: 90vh;
     background-image: url(../multimedia/img-portada-2.jpg);
     background-size:cover;
+    background-position: center;
 }
 @media (min-width:450px){
     .portada{
@@ -45,13 +46,13 @@ img{
 .portada-fechas{
     
     height: 100vh;
-    background-image: url(../multimedia/img36.jpg);
+    background-image: url(../multimedia/portada-fechas-2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-@media (min-width:700px){
+@media (min-width:550px){
     .portada-fechas{
         background-image: url(../multimedia/img27.jpg);
         height: 100vh;
@@ -402,8 +403,8 @@ ul{
             border-radius: 12px;
             -webkit-box-shadow: 15px 15px 33px -15px rgba(49, 28, 28, 0.85);
             -moz-box-shadow: 15px 15px 33px -15px rgba(0,0,0,0.85);
-            box-shadow: 15px 15px 33px -15px rgba(0,0,0,0.85);   
-            
+            box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.5); 
+            min-height: 16rem;
         }
         img:hover{
             box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.3);   
@@ -417,21 +418,22 @@ ul{
         }
         @media (min-width:790px) {
             img{
-                height: 26rem;
+                
             }
             
             img:hover{
-                box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.5);   
-                transform: scale(1.01);
-                transition: .5s;
+                
+                box-shadow: 15px 15px 33px -15px rgba(0,0,0,0.85);     
+                transform: scale(1.02);
+                transition: .3s;
             
                 .reproductor__inicio__boton__play{
-                transform: scale(1.2);
+                transform: scale(1.15);
                 }
             }
             
             .reproductor__inicio__boton__play:hover{
-                transform: scale(1.2);
+                transform: scale(1.15);
             }   
         }
 
