ajuste img portada bandalos - fechas

--- a/scss/_fechas.scss
+++ b/scss/_fechas.scss
@@ -1,6 +1,6 @@
 .fechas{
-    background: rgb(8,81,111);
-    background: linear-gradient(10deg, rgba(8,81,111,0.5505077030812324) 13%, rgba(60,38,80,1) 51%, rgba(3,86,120,0.8698354341736695) 65%, rgba(74,63,84,0.864233193277311) 95%);
+    background: rgb(180,111,102);
+    background: linear-gradient(7deg, rgba(180,111,102,1) 20%, rgba(220,168,128,1) 40%, rgba(121,180,196,1) 60%, rgba(104,138,157,1) 80%);
     background-position: center;
     height: 100%;
     .row{
