--- a/css/estilos.css
+++ b/css/estilos.css
@@ -174,7 +174,7 @@
       background-repeat: no-repeat;
       background-position: center; }
     .seccion__noticias .noticia__carta .noticia__carta--2 {
-      background-image: url(../multimedia/nota-2.jpg);
+      background-image: url(../multimedia/img37.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; }
@@ -332,8 +332,8 @@
     top: 0; } }
 
 .fechas {
-  background: #08516f;
-  background: linear-gradient(10deg, rgba(8, 81, 111, 0.550508) 13%, #3c2650 51%, rgba(3, 86, 120, 0.869835) 65%, rgba(74, 63, 84, 0.864233) 95%);
+  background: #b46f66;
+  background: linear-gradient(7deg, #b46f66 20%, #dca880 40%, #79b4c4 60%, #688a9d 80%);
   background-position: center;
   height: 100%; }
   .fechas .row {
@@ -472,10 +472,15 @@ img {
 
 .portada-bandalos {
   height: 100vh;
-  background-image: url(../multimedia/goy10.jpg);
+  background-image: url(../multimedia/fondo-bandalos-2.jpg);
   background-position: center;
   background-size: cover;
   background-attachment: fixed; }
+
+@media (min-width: 450px) {
+  .portada-bandalos {
+    background-image: url(../multimedia/nota-2.jpg);
+    background-position: top; } }
 
 .portada-musica {
   height: 100vh;
@@ -714,7 +719,7 @@ ul {
     justify-content: center; } }
 
 .seccion__carousel {
-  background-image: linear-gradient(343deg, #ca247156, #37c5b04d), url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
+  background-image: linear-gradient(343deg, #ca247156, #37c5b04d), url(../multimedia/textura-carousel.jpg);
   padding: 5rem 0; }
 
 .seccion__carousel--foto {
