--- a/scss/_seccion__noticias.scss
+++ b/scss/_seccion__noticias.scss
@@ -124,7 +124,7 @@ margin-bottom: 3rem;
       background-position: center;
     }
     .noticia__carta--2{
-        background-image:url(../multimedia/nota-2.jpg) ;
+        background-image:url(../multimedia/img37.jpg) ;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
