--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -28,10 +28,17 @@ img{
 
 .portada-bandalos{
     height: 100vh;
-    background-image: url(../multimedia/goy10.jpg);
+    background-image: url(../multimedia/fondo-bandalos-2.jpg);
     background-position: center;
     background-size:cover ;
     background-attachment: fixed;
+}
+
+@media (min-width:450px){
+    .portada-bandalos{
+        background-image:url(../multimedia/nota-2.jpg) ;
+        background-position: top;
+    }
 }
 
 .portada-musica{
@@ -318,7 +325,7 @@ ul{
 .seccion__carousel{  
     background-image: linear-gradient(343deg,#ca247156,#37c5b04d
     ),
-    url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
+    url(../multimedia/textura-carousel.jpg);
     padding: 5rem 0;
 }
 
