ajuste gradiente II

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -720,7 +720,7 @@ ul {
 
 .seccion__carousel {
   background: #b46f66;
-  background: linear-gradient(3.5deg, #8f2b3de6 20%, #dca880 40%, #c49179d6 60%, #c49579 80%);
+  background: linear-gradient(3.5deg, #da3050e8 20%, #dc3856 60%, #da3050 80%);
   padding: 5rem 0; }
 
 .seccion__carousel--foto {
