--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -324,7 +324,7 @@ ul{
 
 .seccion__carousel{  
     background: rgb(180,111,102);
-    background: linear-gradient(3.5deg, #8f2b3de6  20%,#dca880 40%, #c49179d6 60%, #c49579 80%);
+    background: linear-gradient(3.5deg, #da3050e8 20%, #dc3856 60%, #da3050 80%);
     padding: 5rem 0;
 }
 
