--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -30,6 +30,10 @@
     .videoclips__boton:hover{
         color:#800e4d9d;
     }
+    .videos_portada--margenes{
+        background-color: black;
+        padding: .6rem 0 ;
+    }
     
 }
 
