--- a/scss/_bandalos.scss
+++ b/scss/_bandalos.scss
@@ -41,9 +41,7 @@
         background-position: top;
         height: 25rem;
     }
-    .subtitulo{
-        
-    }
+
     .bandalos__carta__subtitulo{
        margin-left: 1rem;
        position: absolute;
@@ -79,9 +77,11 @@
     .bandalos__galeria{
         h3{
             transform: translateY(2.5rem);
+            transition:all  .6s;
         }
         p{
             display: none;
+            transition:all .6s;
         }
         .bandalos__galeria__carta--8{
             
@@ -91,11 +91,11 @@
     .card:hover{
         h3{
             transform: translateY(0);
-            transition: .6s;
+            transition:all .6s;
         }
         p{
             display: inline;
-            transition: .6s;
+            transition:all .6s;
             
         }
     }
