--- a/scss/_bandalos.scss
+++ b/scss/_bandalos.scss
@@ -9,6 +9,7 @@
         filter: grayscale(.9);
         box-shadow: inset 0px 0px 20px 20px rgba(0, 0, 0, 0.4);
         position: relative;
+        overflow: hidden;
     }
     .bandalos__galeria__carta--1{
         background-image: url(../multimedia/goy-bandalos.jpg);
@@ -61,42 +62,53 @@
     p{
         color: white;
         font-size:1.1rem;
-        
         text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
         filter: drop-shadow(2px 4px 6px black);
         letter-spacing: .2rem;
     }
     .bandalos__galeria__carta:hover{
-        transition: .3s;
+        transition:all .3s;
         filter: none;
         transform: scale(1.015);
+    }
+    .bandalos__subtitulo__desktop{
+        display: none;
     }
 }
 
 @media (min-width:768px){
+
     .bandalos__galeria{
-        h3{
-            transform: translateY(2.5rem);
-            transition:all  .6s;
+        overflow: hidden;
+
+        .bandalos__subtitulo__mobile{
+            display: none;
+        }
+        .bandalos__subtitulo__desktop{
+            display: block;
+            transform: translateY(10rem); 
+            transition: all .6s;
         }
         p{
-            display: none;
+            
             transition:all .6s;
         }
         .bandalos__galeria__carta--8{
-            
             height: 30rem;
         }
     }
     .card:hover{
-        h3{
+        .bandalos__subtitulo__desktop{
             transform: translateY(0);
+            transition: all .6s;
+            h3{
             transition:all .6s;
+            color: white;
+            } 
         }
+        
         p{
-            display: inline;
             transition:all .6s;
-            
         }
     }
     
