--- a/scss/_seccion__noticias.scss
+++ b/scss/_seccion__noticias.scss
@@ -99,7 +99,7 @@ margin-bottom: 3rem;
 .noticia__carta{ 
 
   .noticia__carta--1 {
-    background-image: url(../multimedia/nota-1.jpg);
+    background-image: url(../multimedia/img37.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     
@@ -116,7 +116,7 @@ margin-bottom: 3rem;
     background-repeat: no-repeat;
     
   }
-  @media (min-width:700px){
+  @media (min-width:500px){
     .noticia__carta--1 {
       background-image: url(../multimedia/img37.jpg);
       background-size: cover;
